@@ -26,13 +26,11 @@
 
 package hudson;
 
-import static hudson.FilePath.TarCompression.GZIP;
 import static hudson.Util.fileToPath;
 import static hudson.Util.fixEmpty;
+import static hudson.Util.fixEmptyAndTrim;
 
 import com.google.common.annotations.VisibleForTesting;
-import com.jcraft.jzlib.GZIPInputStream;
-import com.jcraft.jzlib.GZIPOutputStream;
 import edu.umd.cs.findbugs.annotations.CheckForNull;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
@@ -61,7 +59,6 @@ import hudson.util.DirScanner;
 import hudson.util.ExceptionCatchingThreadFactory;
 import hudson.util.FileVisitor;
 import hudson.util.FormValidation;
-import hudson.util.HeadBufferingStream;
 import hudson.util.IOUtils;
 import hudson.util.NamingThreadFactory;
 import hudson.util.io.Archiver;
@@ -80,6 +77,7 @@ import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.RandomAccessFile;
 import java.io.Serializable;
+import java.io.UncheckedIOException;
 import java.io.Writer;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
@@ -87,11 +85,14 @@ import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.CopyOption;
 import java.nio.file.FileSystemException;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.LinkOption;
 import java.nio.file.NoSuchFileException;
+import java.nio.file.OpenOption;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
@@ -115,10 +116,13 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.Predicate;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.zip.GZIPInputStream;
+import java.util.zip.GZIPOutputStream;
 import jenkins.MasterToSlaveFileCallable;
 import jenkins.SlaveToMasterFileCallable;
 import jenkins.model.Jenkins;
@@ -126,15 +130,14 @@ import jenkins.security.MasterToSlaveCallable;
 import jenkins.util.ContextResettingExecutorService;
 import jenkins.util.SystemProperties;
 import jenkins.util.VirtualFile;
-import org.apache.commons.compress.archivers.tar.TarArchiveEntry;
-import org.apache.commons.compress.archivers.tar.TarArchiveInputStream;
-import org.apache.commons.fileupload.FileItem;
+import org.apache.commons.fileupload2.core.FileItem;
 import org.apache.commons.io.input.CountingInputStream;
-import org.apache.commons.lang.StringUtils;
 import org.apache.tools.ant.BuildException;
 import org.apache.tools.ant.DirectoryScanner;
 import org.apache.tools.ant.Project;
 import org.apache.tools.ant.types.FileSet;
+import org.apache.tools.tar.TarEntry;
+import org.apache.tools.tar.TarInputStream;
 import org.apache.tools.zip.ZipEntry;
 import org.apache.tools.zip.ZipFile;
 import org.jenkinsci.remoting.RoleChecker;
@@ -210,6 +213,11 @@ import org.kohsuke.stapler.Stapler;
  * @see VirtualFile
  */
 public final class FilePath implements SerializableOnlyOverRemoting {
+
+    public enum DisplayOption implements OpenOption, CopyOption {
+        IGNORE_TMP_DIRS
+    }
+
     /**
      * Maximum http redirects we will follow. This defaults to the same number as Firefox/Chrome tolerates.
      */
@@ -218,11 +226,11 @@ public final class FilePath implements SerializableOnlyOverRemoting {
     /**
      * When this {@link FilePath} represents the remote path,
      * this field is always non-null on the controller (the field represents
-     * the channel to the remote agent.) When transferred to a agent via remoting,
-     * this field reverts back to null, since it's transient.
+     * the channel to the remote agent.) When transferred to an agent via remoting,
+     * this field reverts to null, since it's transient.
      *
      * When this {@link FilePath} represents a path on the controller,
-     * this field is null on the controller. When transferred to a agent via remoting,
+     * this field is null on the controller. When transferred to an agent via remoting,
      * this field becomes non-null, representing the {@link Channel}
      * back to the controller.
      *
@@ -265,7 +273,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
     /**
      * Construct a path starting with a base location.
      * @param base starting point for resolution, and defines channel
-     * @param rel a path which if relative will be resolved against base
+     * @param rel a path that when relative will be resolved against base
      */
     public FilePath(@NonNull FilePath base, @NonNull String rel) {
         this.channel = base.channel;
@@ -313,7 +321,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
             buf.append(m.group(1));
             path = path.substring(m.end());
         }
-        boolean isAbsolute = buf.length() > 0;
+        boolean isAbsolute = !buf.isEmpty();
         // Split remaining path into tokens, trimming any duplicate or trailing separators
         List<String> tokens = new ArrayList<>();
         int s = 0, end = path.length();
@@ -337,28 +345,28 @@ public final class FilePath implements SerializableOnlyOverRemoting {
             String token = tokens.get(i);
             if (token.equals(".")) {
                 tokens.remove(i);
-                if (tokens.size() > 0)
+                if (!tokens.isEmpty())
                     tokens.remove(i > 0 ? i - 1 : i);
             } else if (token.equals("..")) {
                 if (i == 0) {
                     // If absolute path, just remove: /../something
                     // If relative path, not collapsible so leave as-is
                     tokens.remove(0);
-                    if (tokens.size() > 0) token += tokens.remove(0);
+                    if (!tokens.isEmpty()) token += tokens.remove(0);
                     if (!isAbsolute) buf.append(token);
                 } else {
                     // Normalize: remove something/.. plus separator before/after
                     i -= 2;
                     for (int j = 0; j < 3; j++) tokens.remove(i);
                     if (i > 0) tokens.remove(i - 1);
-                    else if (tokens.size() > 0) tokens.remove(0);
+                    else if (!tokens.isEmpty()) tokens.remove(0);
                 }
             } else
                 i += 2;
         }
         // Recombine tokens
         for (String token : tokens) buf.append(token);
-        if (buf.length() == 0) buf.append('.');
+        if (buf.isEmpty()) buf.append('.');
         return buf.toString();
     }
 
@@ -366,11 +374,11 @@ public final class FilePath implements SerializableOnlyOverRemoting {
      * Checks if the remote path is Unix.
      */
     boolean isUnix() {
-        // if the path represents a local path, there' no need to guess.
+        // if the path represents a local path, there's no need to guess.
         if (!isRemote())
             return File.pathSeparatorChar != ';';
 
-        // note that we can't use the usual File.pathSeparator and etc., as the OS of
+        // note that we can't use the usual File.pathSeparator etc., as the OS of
         // the machine where this code runs and the OS that this FilePath refers to may be different.
 
         // Windows absolute path is 'X:\...', so this is usually a good indication of Windows path
@@ -469,17 +477,15 @@ public final class FilePath implements SerializableOnlyOverRemoting {
      * @param verificationRoot A root or base directory for checking for any symlinks in this files parentage.
      *             Any symlinks between a file and root should be ignored.
      *             Symlinks in the parentage outside root will not be checked.
-     * @param noFollowLinks true if it should not follow links.
      * @param prefix The portion of file path that will be added at the beginning of the relative path inside the archive.
      *               If non-empty, a trailing forward slash will be enforced.
-     *
+     * @param openOptions the options to apply when opening.
      * @return The number of files/directories archived.
      *          This is only really useful to check for a situation where nothing
      */
-    @Restricted(NoExternalUse.class)
-    public int zip(OutputStream out, DirScanner scanner, String verificationRoot, boolean noFollowLinks, String prefix) throws IOException, InterruptedException {
-        ArchiverFactory archiverFactory = noFollowLinks ? ArchiverFactory.createZipWithoutSymlink(prefix) : ArchiverFactory.ZIP;
-        return archive(archiverFactory, out, scanner, verificationRoot, noFollowLinks);
+    public int zip(OutputStream out, DirScanner scanner, String verificationRoot, String prefix, OpenOption... openOptions) throws IOException, InterruptedException {
+        ArchiverFactory archiverFactory = prefix == null ? ArchiverFactory.ZIP : ArchiverFactory.createZipWithPrefix(prefix, openOptions);
+        return archive(archiverFactory, out, scanner, verificationRoot, openOptions);
     }
 
     /**
@@ -491,7 +497,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
      *      is archived.
      */
     public int archive(final ArchiverFactory factory, OutputStream os, final DirScanner scanner) throws IOException, InterruptedException {
-        return archive(factory, os, scanner, null, false);
+        return archive(factory, os, scanner, null);
     }
 
     /**
@@ -503,16 +509,15 @@ public final class FilePath implements SerializableOnlyOverRemoting {
      * @param verificationRoot A root or base directory for checking for any symlinks in this files parentage.
      *             Any symlinks between a file and root should be ignored.
      *             Symlinks in the parentage outside root will not be checked.
-     * @param noFollowLinks true if it should not follow links.
+     * @param openOptions options to apply when opening.
      *
      * @return The number of files/directories archived.
      *          This is only really useful to check for a situation where nothing
      */
-    @Restricted(NoExternalUse.class)
     public int archive(final ArchiverFactory factory, OutputStream os, final DirScanner scanner,
-                       String verificationRoot, boolean noFollowLinks) throws IOException, InterruptedException {
+                       String verificationRoot, OpenOption... openOptions) throws IOException, InterruptedException {
         final OutputStream out = channel != null ? new RemoteOutputStream(os) : os;
-        return act(new Archive(factory, out, scanner, verificationRoot, noFollowLinks));
+        return act(new Archive(factory, out, scanner, verificationRoot, openOptions));
     }
 
     private static class Archive extends MasterToSlaveFileCallable<Integer> {
@@ -520,20 +525,20 @@ public final class FilePath implements SerializableOnlyOverRemoting {
         private final OutputStream out;
         private final DirScanner scanner;
         private final String verificationRoot;
-        private final boolean noFollowLinks;
+        private OpenOption[] openOptions;
 
-        Archive(ArchiverFactory factory, OutputStream out, DirScanner scanner, String verificationRoot, boolean noFollowLinks) {
+        Archive(ArchiverFactory factory, OutputStream out, DirScanner scanner, String verificationRoot, OpenOption... openOptions) {
             this.factory = factory;
             this.out = out;
             this.scanner = scanner;
             this.verificationRoot = verificationRoot;
-            this.noFollowLinks = noFollowLinks;
+            this.openOptions = openOptions;
         }
 
         @Override
             public Integer invoke(File f, VirtualChannel channel) throws IOException {
                 try (Archiver a = factory.create(out)) {
-                    scanner.scan(f, ignoringSymlinks(a, verificationRoot, noFollowLinks));
+                    scanner.scan(f, ignoringTmpDirs(ignoringSymlinks(a, verificationRoot, openOptions), verificationRoot, openOptions));
                     return a.countEntries();
                 }
             }
@@ -755,45 +760,43 @@ public final class FilePath implements SerializableOnlyOverRemoting {
         }
     }
 
-    @Restricted(NoExternalUse.class)
-    public boolean hasSymlink(FilePath verificationRoot, boolean noFollowLinks) throws IOException, InterruptedException {
-        return act(new HasSymlink(verificationRoot == null ? null : verificationRoot.remote, noFollowLinks));
+    public boolean hasSymlink(FilePath verificationRoot, OpenOption... openOptions) throws IOException, InterruptedException {
+        return act(new HasSymlink(verificationRoot == null ? null : verificationRoot.remote, openOptions));
     }
 
     private static class HasSymlink extends MasterToSlaveFileCallable<Boolean> {
         private static final long serialVersionUID = 1L;
         private final String verificationRoot;
-        private final boolean noFollowLinks;
+        private OpenOption[] openOptions;
 
-        HasSymlink(String verificationRoot, boolean noFollowLinks) {
+        HasSymlink(String verificationRoot, OpenOption... openOptions) {
             this.verificationRoot = verificationRoot;
-            this.noFollowLinks = noFollowLinks;
+            this.openOptions = openOptions;
         }
 
         @Override
         public Boolean invoke(File f, VirtualChannel channel) throws IOException {
-            return isSymlink(f, verificationRoot, noFollowLinks);
+            return isSymlink(f, verificationRoot, openOptions);
         }
     }
 
-    @Restricted(NoExternalUse.class)
-    public boolean containsSymlink(FilePath verificationRoot, boolean noFollowLinks) throws IOException, InterruptedException {
-        return !list(new SymlinkRetainingFileFilter(verificationRoot, noFollowLinks)).isEmpty();
+    public boolean containsSymlink(FilePath verificationRoot, OpenOption... openOptions) throws IOException, InterruptedException {
+        return !list(new SymlinkRetainingFileFilter(verificationRoot, openOptions)).isEmpty();
     }
 
     private static class SymlinkRetainingFileFilter implements FileFilter, Serializable {
 
         private final String verificationRoot;
-        private final boolean noFollowLinks;
+        private OpenOption[] openOptions;
 
-        SymlinkRetainingFileFilter(FilePath verificationRoot, boolean noFollowLinks) {
+        SymlinkRetainingFileFilter(FilePath verificationRoot, OpenOption... openOptions) {
             this.verificationRoot = verificationRoot == null ? null : verificationRoot.remote;
-            this.noFollowLinks = noFollowLinks;
+            this.openOptions = openOptions;
         }
 
         @Override
         public boolean accept(File file) {
-            return isSymlink(file, verificationRoot, noFollowLinks);
+            return isSymlink(file, verificationRoot, openOptions);
         }
 
         private static final long serialVersionUID = 1L;
@@ -831,7 +834,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
     }
 
     /**
-     * Resolves symlink, if the given file is a symlink. Otherwise return null.
+     * Resolves symlink, if the given file is a symlink. Otherwise, return null.
      * <p>
      * If the resolution fails, report an error.
      *
@@ -884,15 +887,8 @@ public final class FilePath implements SerializableOnlyOverRemoting {
         },
         GZIP {
             @Override
-            public InputStream extract(InputStream _in) throws IOException {
-                HeadBufferingStream in = new HeadBufferingStream(_in, SIDE_BUFFER_SIZE);
-                try {
-                    return new GZIPInputStream(in, 8192, true);
-                } catch (IOException e) {
-                    // various people reported "java.io.IOException: Not in GZIP format" here, so diagnose this problem better
-                    in.fillSide();
-                    throw new IOException(e.getMessage() + "\nstream=" + Util.toHexString(in.getSideBuffer()), e);
-                }
+            public InputStream extract(InputStream in) throws IOException {
+                return new GZIPInputStream(new BufferedInputStream(in));
             }
 
             @Override
@@ -956,7 +952,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
      * </ul>
      *
      * @param archive
-     *      The resource that represents the tgz/zip file. This URL must support the {@code Last-Modified} header.
+     *      The resource that represents the tgz/zip file. This URL must support the {@code Last-Modified} header or the {@code ETag} header.
      *      (For example, you could use {@link ClassLoader#getResource}.)
      * @param listener
      *      If non-null, a message will be printed to this listener once this method decides to
@@ -978,11 +974,17 @@ public final class FilePath implements SerializableOnlyOverRemoting {
         try {
             FilePath timestamp = this.child(".timestamp");
             long lastModified = timestamp.lastModified();
+            // https://httpwg.org/specs/rfc9110.html#field.etag is the ETag specification
+            // Read previously stored ETag if timestamp is available
+            String etag = timestamp.exists() ? fixEmptyAndTrim(timestamp.readToString()) : null;
             URLConnection con;
             try {
                 con = ProxyConfiguration.open(archive);
                 if (lastModified != 0) {
                     con.setIfModifiedSince(lastModified);
+                }
+                if (etag != null) {
+                    con.setRequestProperty("If-None-Match", etag);
                 }
                 con.connect();
             } catch (IOException x) {
@@ -995,8 +997,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
                 }
             }
 
-            if (con instanceof HttpURLConnection) {
-                HttpURLConnection httpCon = (HttpURLConnection) con;
+            if (con instanceof HttpURLConnection httpCon) {
                 int responseCode = httpCon.getResponseCode();
                 if (responseCode == HttpURLConnection.HTTP_MOVED_PERM
                         || responseCode == HttpURLConnection.HTTP_MOVED_TEMP) {
@@ -1010,7 +1011,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
                         return false;
                     }
                 }
-                if (lastModified != 0) {
+                if (lastModified != 0 || etag != null) {
                     if (responseCode == HttpURLConnection.HTTP_NOT_MODIFIED) {
                         return false;
                     } else if (responseCode != HttpURLConnection.HTTP_OK) {
@@ -1021,8 +1022,12 @@ public final class FilePath implements SerializableOnlyOverRemoting {
             }
 
             long sourceTimestamp = con.getLastModified();
+            String resultEtag = fixEmptyAndTrim(con.getHeaderField("ETag"));
 
             if (this.exists()) {
+                if (equalETags(etag, resultEtag)) {
+                    return false;   // already up to date
+                }
                 if (lastModified != 0 && sourceTimestamp == lastModified)
                     return false;   // already up to date
                 this.deleteContents();
@@ -1036,6 +1041,10 @@ public final class FilePath implements SerializableOnlyOverRemoting {
                 // First try to download from the agent machine.
                 try {
                     act(new Unpack(archive));
+                    if (resultEtag != null && !equalETags(etag, resultEtag)) {
+                        /* Store the ETag value in the timestamp file for later use */
+                        timestamp.write(resultEtag, "UTF-8");
+                    }
                     timestamp.touch(sourceTimestamp);
                     return true;
                 } catch (IOException x) {
@@ -1050,16 +1059,39 @@ public final class FilePath implements SerializableOnlyOverRemoting {
                 if (archive.toExternalForm().endsWith(".zip"))
                     unzipFrom(cis);
                 else
-                    untarFrom(cis, GZIP);
+                    untarFrom(cis, TarCompression.GZIP);
             } catch (IOException e) {
                 throw new IOException(String.format("Failed to unpack %s (%d bytes read of total %d)",
                         archive, cis.getByteCount(), con.getContentLength()), e);
+            }
+            if (resultEtag != null && !equalETags(etag, resultEtag)) {
+                /* Store the ETag value in the timestamp file for later use */
+                timestamp.write(resultEtag, "UTF-8");
             }
             timestamp.touch(sourceTimestamp);
             return true;
         } catch (IOException e) {
             throw new IOException("Failed to install " + archive + " to " + remote, e);
         }
+    }
+
+    /* Return true if etag1 equals etag2 as defined by the etag specification
+       https://httpwg.org/specs/rfc9110.html#field.etag
+     */
+    private boolean equalETags(String etag1, String etag2) {
+        if (etag1 == null || etag2 == null) {
+            return false;
+        }
+        if (etag1.equals(etag2)) {
+            return true;
+        }
+        /* Weak tags are identified by leading characters "W/" as a marker */
+        /* Weak tag marker must not be considered in tag comparison.
+           This implements the weak comparison in the specification at
+           https://httpwg.org/specs/rfc9110.html#field.etag */
+        String opaqueTag1 = etag1.startsWith("W/") ? etag1.substring(2) : etag1;
+        String opaqueTag2 = etag2.startsWith("W/") ? etag2.substring(2) : etag2;
+        return opaqueTag1.equals(opaqueTag2);
     }
 
     // this reads from arbitrary URL
@@ -1077,7 +1109,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
                     if (archive.toExternalForm().endsWith(".zip")) {
                         unzip(dir, cis);
                     } else {
-                        readFromTar("input stream", dir, GZIP.extract(cis));
+                        readFromTar("input stream", dir, TarCompression.GZIP.extract(cis));
                     }
                 } catch (IOException x) {
                     throw new IOException(String.format("Failed to unpack %s (%d bytes read)", archive, cis.getByteCount()), x);
@@ -1126,7 +1158,9 @@ public final class FilePath implements SerializableOnlyOverRemoting {
     public void copyFrom(FileItem file) throws IOException, InterruptedException {
         if (channel == null) {
             try {
-                file.write(new File(remote));
+                file.write(Paths.get(remote));
+            } catch (UncheckedIOException e) {
+                throw e.getCause();
             } catch (IOException e) {
                 throw e;
             } catch (Exception e) {
@@ -1138,6 +1172,14 @@ public final class FilePath implements SerializableOnlyOverRemoting {
                 org.apache.commons.io.IOUtils.copy(i, o);
             }
         }
+    }
+
+    /**
+     * @deprecated use {@link #copyFrom(FileItem)}
+     */
+    @Deprecated
+    public void copyFrom(org.apache.commons.fileupload.FileItem file) throws IOException, InterruptedException {
+        copyFrom(file.toFileUpload2FileItem());
     }
 
     /**
@@ -1209,7 +1251,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
     }
 
     /**
-     * Abstract {@link DelegatingCallable} that exposes an Before/After pattern for
+     * Abstract {@link DelegatingCallable} that exposes a Before/After pattern for
      * {@link hudson.FilePath.FileCallableWrapperFactory} that want to implement AOP-style interceptors
      * @since 1.482
      */
@@ -1402,7 +1444,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
         public Void invoke(File f, VirtualChannel channel) throws IOException {
             for (File file : listParentFiles(f)) {
                 if (file.getName().startsWith(f.getName() + WorkspaceList.COMBINATOR)) {
-                    Util.deleteRecursive(file.toPath(), path -> path.toFile());
+                    Util.deleteRecursive(file.toPath(), Path::toFile);
                 }
             }
 
@@ -1433,7 +1475,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
 
         @Override
         public Void invoke(File f, VirtualChannel channel) throws IOException {
-            Util.deleteRecursive(fileToPath(f), path -> path.toFile());
+            Util.deleteRecursive(fileToPath(f), Path::toFile);
             return null;
         }
     }
@@ -1450,7 +1492,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
 
         @Override
         public Void invoke(File f, VirtualChannel channel) throws IOException {
-            Util.deleteContentsRecursive(fileToPath(f), path -> path.toFile());
+            Util.deleteContentsRecursive(fileToPath(f), Path::toFile);
             return null;
         }
     }
@@ -1672,7 +1714,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
     public FilePath createTempDir(final String prefix, final String suffix) throws IOException, InterruptedException {
         try {
             String[] s;
-            if (StringUtils.isBlank(suffix)) {
+            if (suffix == null || suffix.isBlank()) {
                 s = new String[]{prefix, "tmp"}; // see File.createTempFile - tmp is used if suffix is null
             } else {
                 s = new String[]{prefix, suffix};
@@ -2010,13 +2052,12 @@ public final class FilePath implements SerializableOnlyOverRemoting {
      * @param verificationRoot A root or base directory for checking for any symlinks in this files parentage.
      *             Any symlinks between a file and root should be ignored.
      *             Symlinks in the parentage outside root will not be checked.
-     * @param noFollowLinks true if it should not follow links.
+     * @param openOptions the options to apply when opening.
      * @return Direct children of this directory.
      */
-    @Restricted(NoExternalUse.class)
     @NonNull
-    public List<FilePath> list(FilePath verificationRoot, boolean noFollowLinks) throws IOException, InterruptedException {
-        return list(new SymlinkDiscardingFileFilter(verificationRoot, noFollowLinks));
+    public List<FilePath> list(FilePath verificationRoot, OpenOption... openOptions) throws IOException, InterruptedException {
+        return list(new OptionalDiscardingFileFilter(verificationRoot, openOptions));
     }
 
     /**
@@ -2175,31 +2216,30 @@ public final class FilePath implements SerializableOnlyOverRemoting {
      * Reads this file.
      */
     public InputStream read() throws IOException, InterruptedException {
-        return read(null, false);
+        return read(null, new OpenOption[0]);
     }
 
-    @Restricted(NoExternalUse.class)
-    public InputStream read(FilePath rootPath, boolean noFollowLinks) throws IOException, InterruptedException {
+    public InputStream read(FilePath rootPath, OpenOption... openOptions) throws IOException, InterruptedException {
         String rootPathString = rootPath == null ? null : rootPath.remote;
         if (channel == null) {
             File file = new File(remote);
-            InputStream inputStream = newInputStreamDenyingSymlinkAsNeeded(file, rootPathString, noFollowLinks);
+            InputStream inputStream = newInputStreamDenyingSymlinkAsNeeded(file, rootPathString, openOptions);
             return inputStream;
         }
 
         final Pipe p = Pipe.createRemoteToLocal();
-        actAsync(new Read(p, rootPathString, noFollowLinks));
+        actAsync(new Read(p, rootPathString, openOptions));
 
         return p.getIn();
     }
 
-    @Restricted(NoExternalUse.class)
-    public static InputStream newInputStreamDenyingSymlinkAsNeeded(File file, String verificationRoot, boolean noFollowLinks) throws IOException {
+    public static InputStream newInputStreamDenyingSymlinkAsNeeded(File file, String verificationRoot, OpenOption... openOptions) throws IOException {
         InputStream inputStream = null;
         try {
-            denySymlink(file, verificationRoot, noFollowLinks);
-            inputStream = noFollowLinks ? Files.newInputStream(fileToPath(file), LinkOption.NOFOLLOW_LINKS) : Files.newInputStream(fileToPath(file));
-            denySymlink(file, verificationRoot, noFollowLinks);
+            denyTmpDir(file, verificationRoot, openOptions);
+            denySymlink(file, verificationRoot, openOptions);
+            inputStream = openInputStream(file, openOptions);
+            denySymlink(file, verificationRoot, openOptions);
         } catch (IOException ioe) {
             if (inputStream != null) {
                 inputStream.close();
@@ -2209,7 +2249,18 @@ public final class FilePath implements SerializableOnlyOverRemoting {
         return inputStream;
     }
 
-    private static void denySymlink(File file, String root, boolean noFollowLinks) throws IOException {
+    public static InputStream openInputStream(File file, OpenOption[] openOptions) throws IOException {
+        return Files.newInputStream(fileToPath(file), stripLocalOptions(openOptions));
+    }
+
+    private static OpenOption[] stripLocalOptions(OpenOption... openOptions) {
+        if (openOptions != null) {
+            return Arrays.stream(openOptions).filter(option -> option != DisplayOption.IGNORE_TMP_DIRS).toArray(OpenOption[]::new);
+        }
+        return null;
+    }
+
+    private static void denySymlink(File file, String root, OpenOption... openOptions) throws IOException {
         /* This should be checked right before the file is opened or otherwise traversed.
            If at all possible, it should also be checked immediately afterwards.
            This narrows any possible race conditions that may exist in weird situations,
@@ -2217,19 +2268,24 @@ public final class FilePath implements SerializableOnlyOverRemoting {
            newInputStreamDenyingSymlinkAsNeeded(...) demonstrates how this would be done.
 
            This is useful for preventing symlink following on systems that don't support
-           LinkOption.NOFOLLOW_LINK. Notable among those is AIX. It is also important for
+           LinkOption.NOFOLLOW_LINK. Notable among those, is AIX. It is also important for
            prohibiting Windows Junctions, which are not considered symlinks by the
            Files.newInputStream(path, LinkOption.NOFOLLOW_LINKS) implementation.
         */
 
-        if (isSymlink(file, root, noFollowLinks)) {
+        if (isSymlink(file, root, openOptions)) {
             throw new IOException("Symlinks are prohibited.");
         }
     }
 
-    @Restricted(NoExternalUse.class)
-    public static boolean isSymlink(File file, String root, boolean noFollowLinks) {
-        if (noFollowLinks) {
+    private static void denyTmpDir(File file, String root, OpenOption... openOptions) throws IOException {
+        if (isTmpDir(file, root, openOptions)) {
+            throw new IOException("Tmp directory is prohibited.");
+        }
+    }
+
+    public static boolean isSymlink(File file, String root, OpenOption... openOptions) {
+        if (isNoFollowLink(openOptions)) {
             if (Util.isSymlink(file.toPath())) {
                 return true;
             }
@@ -2239,6 +2295,63 @@ public final class FilePath implements SerializableOnlyOverRemoting {
         return false;
     }
 
+    private static boolean isSymlink(VisitorInfo visitorInfo) {
+        return isSymlink(visitorInfo.f, visitorInfo.verificationRoot, visitorInfo.openOptions);
+    }
+
+    public static boolean isTmpDir(File file, String root, OpenOption... openOptions) {
+        if (isIgnoreTmpDirs(openOptions)) {
+            if (isTmpDir(file)) {
+                return true;
+            }
+
+            return isFileAncestorTmpDir(file, root);
+        }
+        return false;
+    }
+
+    public static boolean isTmpDir(String filename, OpenOption... openOptions) {
+        if (isIgnoreTmpDirs(openOptions)) {
+            return isTmpDir(filename);
+        }
+        return false;
+    }
+
+    private static boolean isTmpDir(VisitorInfo visitorInfo) {
+        return isTmpDir(visitorInfo.f, visitorInfo.verificationRoot, visitorInfo.openOptions);
+    }
+
+    private static boolean isTmpDir(File file) {
+        return file.isDirectory() && isTmpDir(file.getName());
+    }
+
+    private static boolean isTmpDir(String filename) {
+        return filename.length() > WorkspaceList.TMP_DIR_SUFFIX.length() && filename.endsWith(WorkspaceList.TMP_DIR_SUFFIX);
+    }
+
+    public static boolean isNoFollowLink(OpenOption... openOptions) {
+        return Arrays.asList(openOptions).contains(LinkOption.NOFOLLOW_LINKS);
+    }
+
+    public static boolean isIgnoreTmpDirs(OpenOption... openOptions) {
+        return Arrays.asList(openOptions).contains(DisplayOption.IGNORE_TMP_DIRS);
+    }
+
+    private static boolean isFileAncestorSymlink(File file, String root) {
+        return doesFileAncestorMatch(file, root, Util::isSymlink);
+    }
+
+    /**
+     * Determines whether an ancestor of this file is a tmp directory, between the specified
+     * file and the root path. Ancestors further up the tree are not considered.
+     * @param file The base file for the beginning of the search.
+     * @param root The root path for ending the search.
+     * @return True if there is a tmp directory within the domain. False otherwise.
+     */
+    private static boolean isFileAncestorTmpDir(File file, String root) {
+        return doesFileAncestorMatch(file, root, path -> isTmpDir(path.toFile()));
+    }
+
     /**
      * Determines whether an ancestor of this file is a symlink, between the specified
      * file and the root path. Ancestors further up the tree are not considered.
@@ -2246,13 +2359,13 @@ public final class FilePath implements SerializableOnlyOverRemoting {
      * @param root The root path for ending the search.
      * @return True if there is a symlink within the domain. False otherwise.
      */
-    private static boolean isFileAncestorSymlink(File file, String root) {
+     private static boolean doesFileAncestorMatch(File file, String root, Predicate<Path> matcher) {
         if (root != null) {
             Path rootPath = Paths.get(root);
             Path currPath = file.toPath();
             try {
                 while (!getRealPath(currPath).equals(getRealPath(rootPath))) {
-                    if (Util.isSymlink(currPath)) {
+                    if (matcher.test(currPath)) {
                         return true;
                     }
                     currPath = currPath.getParent();
@@ -2271,17 +2384,17 @@ public final class FilePath implements SerializableOnlyOverRemoting {
         private static final long serialVersionUID = 1L;
         private final Pipe p;
         private String verificationRoot;
-        private boolean noFollowLinks;
+        private OpenOption[] openOptions;
 
-        Read(Pipe p, String verificationRoot, boolean noFollowLinks) {
+        Read(Pipe p, String verificationRoot, OpenOption... openOptions) {
             this.p = p;
             this.verificationRoot = verificationRoot;
-            this.noFollowLinks = noFollowLinks;
+            this.openOptions = openOptions;
         }
 
         @Override
         public Void invoke(File f, VirtualChannel channel) throws IOException, InterruptedException {
-            try (InputStream fis = newInputStreamDenyingSymlinkAsNeeded(f, verificationRoot, noFollowLinks); OutputStream out = p.getOut()) {
+            try (InputStream fis = newInputStreamDenyingSymlinkAsNeeded(f, verificationRoot, openOptions); OutputStream out = p.getOut()) {
                 org.apache.commons.io.IOUtils.copy(fis, out);
             } catch (Exception x) {
                 p.error(x);
@@ -2349,7 +2462,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
         @Override
         public Void invoke(File f, VirtualChannel channel) throws IOException {
             try (OutputStream os = p.getOut();
-                 OutputStream out = new java.util.zip.GZIPOutputStream(os, 8192);
+                 OutputStream out = new GZIPOutputStream(os, 8192);
                  RandomAccessFile raf = new RandomAccessFile(f, "r")) {
                 raf.seek(offset);
                 byte[] buf = new byte[8192];
@@ -2462,7 +2575,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
 
     /**
      * Rename this file/directory to the target filepath.  This FilePath and the target must
-     * be on the some host
+     * be on the same host
      */
     public void renameTo(final FilePath target) throws IOException, InterruptedException {
         if (this.channel != target.channel) {
@@ -2511,7 +2624,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
             @Override
             public Void invoke(File f, VirtualChannel channel) throws IOException {
                 // JENKINS-16846: if f.getName() is the same as one of the files/directories in f,
-                // then the rename op will fail
+                // the rename op will fail
                 File tmp = new File(f.getAbsolutePath() + ".__rename");
                 if (!f.renameTo(tmp))
                     throw new IOException("Failed to rename " + f + " to " + tmp);
@@ -2668,7 +2781,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
      * @param fileMask
      *      Ant GLOB pattern.
      *      String like "foo/bar/*.xml" Multiple patterns can be separated
-     *      by ',', and whitespace can surround ',' (so that you can write
+     *      by ',', and whitespace can surround ',' so that you can write
      *      "abc, def" and "abc,def" to mean the same thing.
      * @return
      *      the number of files copied.
@@ -2683,7 +2796,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
      * @param fileMask
      *      Ant GLOB pattern.
      *      String like "foo/bar/*.xml" Multiple patterns can be separated
-     *      by ',', and whitespace can surround ',' (so that you can write
+     *      by ',', and whitespace can surround ',' so that you can write
      *      "abc, def" and "abc,def" to mean the same thing.
      * @param excludes
      *      Files to be excluded. Can be null.
@@ -2703,7 +2816,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
      * @since 1.532
      */
     public int copyRecursiveTo(final DirScanner scanner, final FilePath target, final String description) throws IOException, InterruptedException {
-        return copyRecursiveTo(scanner, target, description, GZIP);
+        return copyRecursiveTo(scanner, target, description, TarCompression.GZIP);
     }
 
     /**
@@ -2724,8 +2837,8 @@ public final class FilePath implements SerializableOnlyOverRemoting {
             // local -> remote copy
             final Pipe pipe = Pipe.createLocalToRemote();
 
-            Future<Void> future = target.actAsync(new ReadFromTar(target, pipe, description, compression));
-            Future<Integer> future2 = actAsync(new WriteToTar(scanner, pipe, compression));
+            Future<Void> future = target.actAsync(new ReadFromTar(target, pipe, description, compression, StandardCharsets.UTF_8));
+            Future<Integer> future2 = actAsync(new WriteToTar(scanner, pipe, compression, StandardCharsets.UTF_8));
             try {
                 // JENKINS-9540 in case the reading side failed, report that error first
                 future.get();
@@ -2737,9 +2850,9 @@ public final class FilePath implements SerializableOnlyOverRemoting {
             // remote -> local copy
             final Pipe pipe = Pipe.createRemoteToLocal();
 
-            Future<Integer> future = actAsync(new CopyRecursiveRemoteToLocal(pipe, scanner, compression));
+            Future<Integer> future = actAsync(new CopyRecursiveRemoteToLocal(pipe, scanner, compression, StandardCharsets.UTF_8));
             try {
-                readFromTar(remote + '/' + description, new File(target.remote), compression.extract(pipe.getIn()));
+                readFromTar(remote + '/' + description, new File(target.remote), compression.extract(pipe.getIn()), StandardCharsets.UTF_8);
             } catch (IOException e) { // BuildException or IOException
                 try {
                     future.get(3, TimeUnit.SECONDS);
@@ -2852,12 +2965,14 @@ public final class FilePath implements SerializableOnlyOverRemoting {
         private final String description;
         private final TarCompression compression;
         private final FilePath target;
+        private final String filenamesEncoding;
 
-        ReadFromTar(FilePath target, Pipe pipe, String description, @NonNull TarCompression compression) {
+        ReadFromTar(FilePath target, Pipe pipe, String description, @NonNull TarCompression compression, Charset filenamesEncoding) {
             this.target = target;
             this.pipe = pipe;
             this.description = description;
             this.compression = compression;
+            this.filenamesEncoding = filenamesEncoding.name();
         }
 
         private static final long serialVersionUID = 1L;
@@ -2865,7 +2980,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
         @Override
         public Void invoke(File f, VirtualChannel channel) throws IOException {
             try (InputStream in = pipe.getIn()) {
-                readFromTar(target.remote + '/' + description, f, compression.extract(in));
+                readFromTar(target.remote + '/' + description, f, compression.extract(in), Charset.forName(filenamesEncoding));
                 return null;
             }
         }
@@ -2875,18 +2990,20 @@ public final class FilePath implements SerializableOnlyOverRemoting {
         private final DirScanner scanner;
         private final Pipe pipe;
         private final TarCompression compression;
+        private final String filenamesEncoding;
 
-        WriteToTar(DirScanner scanner, Pipe pipe, @NonNull TarCompression compression) {
+        WriteToTar(DirScanner scanner, Pipe pipe, @NonNull TarCompression compression, Charset filenamesEncoding) {
             this.scanner = scanner;
             this.pipe = pipe;
             this.compression = compression;
+            this.filenamesEncoding = filenamesEncoding.name();
         }
 
         private static final long serialVersionUID = 1L;
 
         @Override
         public Integer invoke(File f, VirtualChannel channel) throws IOException, InterruptedException {
-            return writeToTar(f, scanner, compression.compress(pipe.getOut()));
+            return writeToTar(f, scanner, compression.compress(pipe.getOut()), Charset.forName(filenamesEncoding));
         }
     }
 
@@ -2895,17 +3012,19 @@ public final class FilePath implements SerializableOnlyOverRemoting {
         private final Pipe pipe;
         private final DirScanner scanner;
         private final TarCompression compression;
+        private final String filenamesEncoding;
 
-        CopyRecursiveRemoteToLocal(Pipe pipe, DirScanner scanner, @NonNull TarCompression compression) {
+        CopyRecursiveRemoteToLocal(Pipe pipe, DirScanner scanner, @NonNull TarCompression compression, Charset filenamesEncoding) {
             this.pipe = pipe;
             this.scanner = scanner;
             this.compression = compression;
+            this.filenamesEncoding = filenamesEncoding.name();
         }
 
         @Override
         public Integer invoke(File f, VirtualChannel channel) throws IOException {
             try (OutputStream out = pipe.getOut()) {
-                return writeToTar(f, scanner, compression.compress(out));
+                return writeToTar(f, scanner, compression.compress(out), Charset.forName(filenamesEncoding));
             }
         }
     }
@@ -2937,24 +3056,27 @@ public final class FilePath implements SerializableOnlyOverRemoting {
      * @return
      *      number of files/directories that are written.
      */
-    private static Integer writeToTar(File baseDir, DirScanner scanner, OutputStream out) throws IOException {
-        Archiver tw = ArchiverFactory.TAR.create(out);
+    private static Integer writeToTar(File baseDir, DirScanner scanner, OutputStream out, Charset filenamesEncoding) throws IOException {
+        Archiver tw = ArchiverFactory.TAR.create(out, filenamesEncoding);
         try (tw) {
             scanner.scan(baseDir, tw);
         }
         return tw.countEntries();
     }
 
+    private static void readFromTar(String name, File baseDir, InputStream in) throws IOException {
+        readFromTar(name, baseDir, in, Charset.defaultCharset());
+    }
+
     /**
      * Reads from a tar stream and stores obtained files to the base dir.
-     * Supports large files > 10 GB since 1.627 when this was migrated to use commons-compress.
+     * Supports large files &gt; 10 GB since 1.627.
      */
-    private static void readFromTar(String name, File baseDir, InputStream in) throws IOException {
+    private static void readFromTar(String name, File baseDir, InputStream in, Charset filenamesEncoding) throws IOException {
 
-        // TarInputStream t = new TarInputStream(in);
-        try (TarArchiveInputStream t = new TarArchiveInputStream(in)) {
-            TarArchiveEntry te;
-            while ((te = t.getNextTarEntry()) != null) {
+        try (TarInputStream t = new TarInputStream(in, filenamesEncoding.name())) {
+            TarEntry te;
+            while ((te = t.getNextEntry()) != null) {
                 File f = new File(baseDir, te.getName());
                 if (!f.toPath().normalize().startsWith(baseDir.toPath())) {
                     throw new IOException(
@@ -3012,7 +3134,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
      * Same as {@link #validateAntFileMask(String, int)} with (practically) unbounded number of operations.
      *
      * @return
-     *      null if no error was found. Otherwise returns a human readable error message.
+     *      null if no error was found. Otherwise, returns a human-readable error message.
      * @since 1.90
      * @see #validateFileMask(FilePath, String)
      * @deprecated use {@link #validateAntFileMask(String, int)} instead
@@ -3110,8 +3232,8 @@ public final class FilePath implements SerializableOnlyOverRemoting {
                     if (hasMatch(dir, fileMask, caseSensitive))
                         continue;   // no error on this portion
 
-                    // JENKINS-5253 - if we can get some match in case insensitive mode
-                    // and user requested case sensitive match, notify the user
+                    // JENKINS-5253 - if we can get some match in case-insensitive mode
+                    // and user requested case-sensitive match, notify the user
                     if (caseSensitive && hasMatch(dir, fileMask, false)) {
                         return Messages.FilePath_validateAntFileMask_matchWithCaseInsensitive(fileMask);
                     }
@@ -3148,7 +3270,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
                         fs.setCaseSensitive(caseSensitive);
                         DirectoryScanner ds = fs.getDirectoryScanner(new Project());
                         if (ds.getIncludedFilesCount() != 0) {
-                            // try shorter name first so that the suggestion results in least amount of changes
+                            // try shorter name first so that the suggestion results in the least amount of changes
                             String[] names = ds.getIncludedFiles();
                             Arrays.sort(names, SHORTER_STRING_FIRST);
                             for (String f : names) {
@@ -3172,7 +3294,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
                         }
                     }
 
-                    { // finally, see if we can identify any sub portion that's valid. Otherwise bail out
+                    { // finally, see if we can identify any sub portion that's valid. Otherwise, bail out
                         String previous = null;
                         String pattern = fileMask;
 
@@ -3343,7 +3465,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
      * @param value
      *      The relative path being validated.
      * @param errorIfNotExist
-     *      If true, report an error if the given relative path doesn't exist. Otherwise it's a warning.
+     *      If true, report an error if the given relative path doesn't exist. Otherwise, it's a warning.
      * @param expectingFile
      *      If true, we expect the relative path to point to a file.
      *      Otherwise, the relative path is expected to be pointing to a directory.
@@ -3388,7 +3510,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
     }
 
     private static void checkPermissionForValidate() {
-        AccessControlled subject = Stapler.getCurrentRequest().findAncestorObject(AbstractProject.class);
+        AccessControlled subject = Stapler.getCurrentRequest2().findAncestorObject(AbstractProject.class);
         if (subject == null)
             Jenkins.get().checkPermission(Jenkins.MANAGE);
         else
@@ -3589,13 +3711,29 @@ public final class FilePath implements SerializableOnlyOverRemoting {
     /**
      * Wraps {@link FileVisitor} to ignore symlinks.
      */
-    @Restricted(NoExternalUse.class)
-    public static FileVisitor ignoringSymlinks(final FileVisitor v, String verificationRoot, boolean noFollowLinks) {
-        if (noFollowLinks) {
+    public static FileVisitor ignoringSymlinks(final FileVisitor v, String verificationRoot, OpenOption... openOptions) {
+        return validatingVisitor(FilePath::isNoFollowLink,
+                visitorInfo -> !isSymlink(visitorInfo),
+                v, verificationRoot, openOptions);
+    }
+
+    /**
+     * Wraps {@link FileVisitor} to ignore tmp directories.
+     */
+    public static FileVisitor ignoringTmpDirs(final FileVisitor v, String verificationRoot, OpenOption... openOptions) {
+        return validatingVisitor(FilePath::isIgnoreTmpDirs,
+                visitorInfo -> !isTmpDir(visitorInfo),
+                v, verificationRoot, openOptions);
+    }
+
+    private static FileVisitor validatingVisitor(Predicate<OpenOption[]> gater, Predicate<VisitorInfo> matcher,
+                                                 final FileVisitor v, String verificationRoot, OpenOption... openOptions) {
+        if (gater.test(openOptions)) {
             return new FileVisitor() {
                 @Override
                 public void visit(File f, String relativePath) throws IOException {
-                    if (verificationRoot == null || !FilePath.isSymlink(f, verificationRoot, noFollowLinks)) {
+                    VisitorInfo visitorInfo = new VisitorInfo(f, verificationRoot, openOptions);
+                    if (verificationRoot == null || matcher.test(visitorInfo)) {
                         v.visit(f, relativePath);
                     }
                 }
@@ -3624,10 +3762,7 @@ public final class FilePath implements SerializableOnlyOverRemoting {
 
     /**
      * Check if the relative child is really a descendant after symlink resolution if any.
-     *
-     * TODO un-restrict it in a weekly after the patch
      */
-    @Restricted(NoExternalUse.class)
     public boolean isDescendant(@NonNull String potentialChildRelativePath) throws IOException, InterruptedException {
         return act(new IsDescendant(potentialChildRelativePath));
     }
@@ -3751,21 +3886,34 @@ public final class FilePath implements SerializableOnlyOverRemoting {
         return path.toRealPath(LinkOption.NOFOLLOW_LINKS);
     }
 
-    private static class SymlinkDiscardingFileFilter implements FileFilter, Serializable {
+    private static class OptionalDiscardingFileFilter implements FileFilter, Serializable {
 
         private final String verificationRoot;
-        private final boolean noFollowLinks;
+        private OpenOption[] openOptions;
 
-        SymlinkDiscardingFileFilter(FilePath verificationRoot, boolean noFollowLinks) {
+        OptionalDiscardingFileFilter(FilePath verificationRoot, OpenOption... openOptions) {
             this.verificationRoot = verificationRoot == null ? null : verificationRoot.remote;
-            this.noFollowLinks = noFollowLinks;
+            this.openOptions = openOptions;
         }
 
         @Override
         public boolean accept(File file) {
-            return !isSymlink(file, verificationRoot, noFollowLinks);
+            return !isSymlink(file, verificationRoot, openOptions) && !isTmpDir(file, verificationRoot, openOptions);
         }
 
         private static final long serialVersionUID = 1L;
+    }
+
+    private static class VisitorInfo {
+        File f;
+        String verificationRoot;
+        OpenOption[] openOptions;
+
+        VisitorInfo(File f, String verificationRoot, OpenOption[] openOptions) {
+            this.f = f;
+            this.verificationRoot = verificationRoot;
+            this.openOptions = openOptions;
+        }
+
     }
 }
