@@ -31,7 +31,9 @@ import hudson.model.AbstractDescribableImpl;
 import hudson.model.Descriptor;
 import hudson.model.Saveable;
 import hudson.model.listeners.SaveableListener;
+import hudson.util.DaemonThreadFactory;
 import hudson.util.FormValidation;
+import hudson.util.NamingThreadFactory;
 import hudson.util.Scrambler;
 import hudson.util.Secret;
 import hudson.util.XStream2;
@@ -42,26 +44,31 @@ import java.io.Serializable;
 import java.net.Authenticator;
 import java.net.HttpURLConnection;
 import java.net.InetSocketAddress;
-import java.net.MalformedURLException;
 import java.net.PasswordAuthentication;
 import java.net.Proxy;
+import java.net.ProxySelector;
+import java.net.SocketAddress;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
+import java.util.concurrent.Executor;
+import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import java.util.regex.Pattern;
+import jenkins.UserAgentURLConnectionDecorator;
 import jenkins.model.Jenkins;
 import jenkins.security.stapler.StaplerAccessibleType;
 import jenkins.util.JenkinsJVM;
 import jenkins.util.SystemProperties;
-import org.apache.commons.httpclient.Credentials;
-import org.apache.commons.httpclient.HttpClient;
-import org.apache.commons.httpclient.NTCredentials;
-import org.apache.commons.httpclient.UsernamePasswordCredentials;
-import org.apache.commons.httpclient.auth.AuthScope;
-import org.apache.commons.httpclient.methods.GetMethod;
 import org.jenkinsci.Symbol;
 import org.jvnet.robust_http_client.RetryableHttpStream;
 import org.kohsuke.accmod.Restricted;
@@ -219,10 +226,14 @@ public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfi
 
         List<Pattern> r = new ArrayList<>();
         for (String s : noProxyHost.split("[ \t\n,|]+")) {
-            if (s.length() == 0)  continue;
+            if (s.isEmpty())  continue;
             r.add(Pattern.compile(s.replace(".", "\\.").replace("*", ".*")));
         }
         return r;
+    }
+
+    private static boolean isExcluded(String needle, String haystack) {
+        return getNoProxyHostPatterns(haystack).stream().anyMatch(p -> p.matcher(needle).matches());
     }
 
     @DataBoundSetter
@@ -237,7 +248,7 @@ public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfi
 
     @DataBoundSetter
     public void setUserName(String userName) {
-        this.userName = userName;
+        this.userName = Util.fixEmptyAndTrim(userName);
     }
 
     @DataBoundSetter
@@ -259,11 +270,8 @@ public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfi
     }
 
     public static Proxy createProxy(String host, String name, int port, String noProxyHost) {
-        if (host != null && noProxyHost != null) {
-            for (Pattern p : getNoProxyHostPatterns(noProxyHost)) {
-                if (p.matcher(host).matches())
-                    return Proxy.NO_PROXY;
-            }
+        if (host != null && noProxyHost != null && isExcluded(host, noProxyHost)) {
+           return Proxy.NO_PROXY;
         }
         return new Proxy(Proxy.Type.HTTP, new InetSocketAddress(name, port));
     }
@@ -282,6 +290,7 @@ public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfi
             secretPassword = Secret.fromString(Scrambler.descramble(password));
         password = null;
         authenticator = newAuthenticator();
+        userName = Util.fixEmptyAndTrim(userName);
         return this;
     }
 
@@ -299,7 +308,10 @@ public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfi
 
     /**
      * This method should be used wherever {@link URL#openConnection()} to internet URLs is invoked directly.
+     *
+     * @deprecated use {@link #newHttpClient}/{@link #newHttpClientBuilder} and {@link #newHttpRequestBuilder(URI)}
      */
+    @Deprecated
     public static URLConnection open(URL url) throws IOException {
         final ProxyConfiguration p = get();
 
@@ -327,6 +339,10 @@ public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfi
         return con;
     }
 
+    /**
+     * @deprecated use {@link #newHttpClient}/{@link #newHttpClientBuilder} and {@link #newHttpRequestBuilder(URI)}
+     */
+    @Deprecated
     public static InputStream getInputStream(URL url) throws IOException {
         final ProxyConfiguration p = get();
         if (p == null)
@@ -341,6 +357,106 @@ public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfi
         }
 
         return is;
+    }
+
+    /**
+     * Return a new {@link HttpClient} with Jenkins-specific default settings.
+     *
+     * <p>Equivalent to {@code newHttpClientBuilder().followRedirects(HttpClient.Redirect.NORMAL).build()}.
+     *
+     * @return a new {@link HttpClient}
+     * @since 2.379
+     * @see #newHttpClientBuilder
+     */
+    public static HttpClient newHttpClient() {
+        return newHttpClientBuilder().followRedirects(HttpClient.Redirect.NORMAL).build();
+    }
+
+    private static final Executor httpClientExecutor = Executors.newCachedThreadPool(new NamingThreadFactory(new DaemonThreadFactory(), "Jenkins HttpClient"));
+
+    /**
+     * Create a new {@link HttpClient.Builder} preconfigured with Jenkins-specific default settings.
+     *
+     * <p>The Jenkins-specific default settings include a proxy server and proxy authentication (as
+     * configured by {@link ProxyConfiguration}) and a connection timeout (as configured by {@link
+     * ProxyConfiguration#DEFAULT_CONNECT_TIMEOUT_MILLIS}).
+     *
+     * <p><strong>Warning:</strong> if both {@link #getName} and {@link #getUserName} are set
+     * (meaning that an authenticated proxy is defined),
+     * you will not be able to pass an {@code Authorization} header to the real server
+     * when running on Java 17 and later
+     * (pending <a href="https://bugs.openjdk.org/browse/JDK-8326949">JDK-8326949</a>.
+     *
+     * @return an {@link HttpClient.Builder}
+     * @since 2.379
+     */
+    public static HttpClient.Builder newHttpClientBuilder() {
+        HttpClient.Builder httpClientBuilder = HttpClient.newBuilder();
+        ProxyConfiguration proxyConfiguration = get();
+        if (proxyConfiguration != null) {
+            if (proxyConfiguration.getName() != null) {
+                httpClientBuilder.proxy(new JenkinsProxySelector(
+                        proxyConfiguration.getName(),
+                        proxyConfiguration.getPort(),
+                        proxyConfiguration.getNoProxyHost()));
+            }
+            if (proxyConfiguration.getUserName() != null) {
+                httpClientBuilder.authenticator(proxyConfiguration.authenticator);
+            }
+        }
+        if (DEFAULT_CONNECT_TIMEOUT_MILLIS > 0) {
+            httpClientBuilder.connectTimeout(Duration.ofMillis(DEFAULT_CONNECT_TIMEOUT_MILLIS));
+        }
+        httpClientBuilder.executor(httpClientExecutor);
+        return httpClientBuilder;
+    }
+
+    /**
+     * Create a new {@link HttpRequest.Builder} builder with the given URI preconfigured with
+     * Jenkins-specific default settings.
+     *
+     * <p>The Jenkins-specific default settings include a custom user agent on the controller
+     * (unless {@link UserAgentURLConnectionDecorator#DISABLED} is true).
+     *
+     * @param uri the request URI
+     * @return an {@link HttpRequest.Builder}
+     * @throws IllegalArgumentException if the URI scheme is not supported
+     * @since 2.379
+     */
+    public static HttpRequest.Builder newHttpRequestBuilder(URI uri) {
+        HttpRequest.Builder httpRequestBuilder = HttpRequest.newBuilder(uri);
+        if (JenkinsJVM.isJenkinsJVM() && !UserAgentURLConnectionDecorator.DISABLED) {
+            httpRequestBuilder.setHeader("User-Agent", UserAgentURLConnectionDecorator.getUserAgent());
+        }
+        return httpRequestBuilder;
+    }
+
+    private static class JenkinsProxySelector extends ProxySelector {
+        @NonNull private final Proxy proxy;
+        @CheckForNull private final String exclusions;
+
+        private JenkinsProxySelector(@NonNull String hostname, int port, @CheckForNull String exclusions) {
+            this.proxy = new Proxy(Proxy.Type.HTTP, new InetSocketAddress(hostname, port));
+            this.exclusions = exclusions;
+        }
+
+        @Override
+        public void connectFailed(URI uri, SocketAddress sa, IOException e) {
+            // Ignore.
+        }
+
+        @Override
+        public List<Proxy> select(URI uri) {
+            Objects.requireNonNull(uri);
+            String scheme = Objects.requireNonNull(uri.getScheme());
+            String host = Objects.requireNonNull(uri.getHost());
+            boolean excluded = exclusions != null && isExcluded(host.toLowerCase(), exclusions);
+            if (!excluded && (scheme.equalsIgnoreCase("http") || scheme.equalsIgnoreCase("https"))) {
+                return List.of(proxy);
+            } else {
+                return List.of(Proxy.NO_PROXY);
+            }
+        }
     }
 
     /**
@@ -424,53 +540,81 @@ public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfi
             return FormValidation.ok();
         }
 
+        /**
+         * Do check if the provided value is empty or composed of whitespaces.
+         * If so, return a validation warning.
+         *
+         * @param value the value to test
+         * @return a validation warning iff the provided value is empty or composed of whitespaces.
+         */
+        private static FormValidation checkProxyCredentials(String value) {
+            value = Util.fixEmptyAndTrim(value);
+            if (value == null) {
+                return FormValidation.ok();
+            } else {
+                return FormValidation.warning(Messages.ProxyConfiguration_NonTLSWarning());
+            }
+        }
+
+        @RequirePOST
+        @Restricted(NoExternalUse.class)
+        public FormValidation doCheckUserName(@QueryParameter String value) {
+            return checkProxyCredentials(value);
+        }
+
+        @RequirePOST
+        @Restricted(NoExternalUse.class)
+        public FormValidation doCheckSecretPassword(@QueryParameter String value) {
+            return checkProxyCredentials(value);
+        }
+
         @RequirePOST
         @Restricted(NoExternalUse.class)
         public FormValidation doValidateProxy(
                 @QueryParameter("testUrl") String testUrl, @QueryParameter("name") String name, @QueryParameter("port") int port,
                 @QueryParameter("userName") String userName, @QueryParameter("secretPassword") Secret password,
-                @QueryParameter("noProxyHost") String noProxyHost) {
+                @QueryParameter("noProxyHost") String noProxyHost) throws InterruptedException {
 
             Jenkins.get().checkPermission(Jenkins.ADMINISTER);
 
-            if (Util.fixEmptyAndTrim(testUrl) == null) {
+            testUrl = Util.fixEmptyAndTrim(testUrl);
+            if (testUrl == null) {
                 return FormValidation.error(Messages.ProxyConfiguration_TestUrlRequired());
             }
 
-            String host;
+            URI uri;
             try {
-                URL url = new URL(testUrl);
-                host = url.getHost();
-            } catch (MalformedURLException e) {
-                return FormValidation.error(Messages.ProxyConfiguration_MalformedTestUrl(testUrl));
+                uri = new URI(testUrl);
+            } catch (URISyntaxException e) {
+                return FormValidation.error(e, Messages.ProxyConfiguration_MalformedTestUrl(testUrl));
             }
-
-            GetMethod method = null;
+            HttpClient.Builder builder = HttpClient.newBuilder();
+            builder.connectTimeout(DEFAULT_CONNECT_TIMEOUT_MILLIS > 0
+                    ? Duration.ofMillis(DEFAULT_CONNECT_TIMEOUT_MILLIS)
+                    : Duration.ofSeconds(30));
+            if (Util.fixEmptyAndTrim(name) != null && !isNoProxyHost(uri.getHost(), noProxyHost)) {
+                builder.proxy(ProxySelector.of(new InetSocketAddress(name, port)));
+                Authenticator authenticator = newValidationAuthenticator(userName, password != null ? password.getPlainText() : null);
+                builder.authenticator(authenticator);
+            }
+            HttpClient httpClient = builder.build();
+            HttpRequest httpRequest;
             try {
-                method = new GetMethod(testUrl);
-                method.getParams().setParameter("http.socket.timeout", DEFAULT_CONNECT_TIMEOUT_MILLIS > 0 ? DEFAULT_CONNECT_TIMEOUT_MILLIS : (int) TimeUnit.SECONDS.toMillis(30));
-
-                HttpClient client = new HttpClient();
-                if (Util.fixEmptyAndTrim(name) != null && !isNoProxyHost(host, noProxyHost)) {
-                    client.getHostConfiguration().setProxy(name, port);
-                    Credentials credentials = createCredentials(userName, password != null ? password.getPlainText() : null);
-                    AuthScope scope = new AuthScope(AuthScope.ANY_HOST, AuthScope.ANY_PORT);
-                    client.getState().setProxyCredentials(scope, credentials);
+                httpRequest = ProxyConfiguration.newHttpRequestBuilder(uri)
+                        .method("HEAD", HttpRequest.BodyPublishers.noBody())
+                        .build();
+            } catch (IllegalArgumentException e) {
+                return FormValidation.error(e, Messages.ProxyConfiguration_MalformedTestUrl(testUrl));
+            }
+            try {
+                HttpResponse<Void> httpResponse = httpClient.send(httpRequest, HttpResponse.BodyHandlers.discarding());
+                if (httpResponse.statusCode() < HttpURLConnection.HTTP_BAD_REQUEST) {
+                    return FormValidation.ok(Messages.ProxyConfiguration_Success(httpResponse.statusCode()));
                 }
-
-                int code = client.executeMethod(method);
-                if (code != HttpURLConnection.HTTP_OK) {
-                    return FormValidation.error(Messages.ProxyConfiguration_FailedToConnect(testUrl, code));
-                }
+                return FormValidation.error(Messages.ProxyConfiguration_FailedToConnect(testUrl, httpResponse.statusCode()));
             } catch (IOException e) {
                 return FormValidation.error(e, Messages.ProxyConfiguration_FailedToConnectViaProxy(testUrl));
-            } finally {
-                if (method != null) {
-                    method.releaseConnection();
-                }
             }
-
-            return FormValidation.ok(Messages.ProxyConfiguration_Success());
         }
 
         private boolean isNoProxyHost(String host, String noProxyHost) {
@@ -484,14 +628,19 @@ public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfi
             return false;
         }
 
-        private Credentials createCredentials(String userName, String password) {
-            if (userName.indexOf('\\') >= 0) {
-                final String domain = userName.substring(0, userName.indexOf('\\'));
-                final String user = userName.substring(userName.indexOf('\\') + 1);
-                return new NTCredentials(user, Secret.fromString(password).getPlainText(), "", domain);
-            } else {
-                return new UsernamePasswordCredentials(userName, Secret.fromString(password).getPlainText());
-            }
+        /**
+         * Create an {@link Authenticator} for use in validation context.
+         *
+         * @see #newAuthenticator
+         */
+        private static Authenticator newValidationAuthenticator(String userName, String password) {
+            return new Authenticator() {
+                @Override
+                protected PasswordAuthentication getPasswordAuthentication() {
+                    return new PasswordAuthentication(
+                            userName, Secret.fromString(password).getPlainText().toCharArray());
+                }
+            };
         }
     }
 }
