@@ -31,13 +31,9 @@ import static org.hamcrest.xml.HasXPath.hasXPath;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 
-import com.gargoylesoftware.htmlunit.WebRequest;
-import com.gargoylesoftware.htmlunit.html.HtmlPage;
-import com.gargoylesoftware.htmlunit.html.HtmlTextInput;
-import com.gargoylesoftware.htmlunit.xml.XmlPage;
 import hudson.ExtensionComponent;
 import hudson.model.User;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.Base64;
 import java.util.concurrent.atomic.AtomicReference;
@@ -45,6 +41,10 @@ import jenkins.ExtensionFilter;
 import jenkins.model.GlobalConfiguration;
 import jenkins.model.Jenkins;
 import jenkins.security.apitoken.ApiTokenPropertyConfiguration;
+import org.htmlunit.WebRequest;
+import org.htmlunit.html.HtmlPage;
+import org.htmlunit.html.HtmlTextInput;
+import org.htmlunit.xml.XmlPage;
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.Issue;
@@ -70,7 +70,7 @@ public class BasicHeaderApiTokenAuthenticatorTest {
                     // default SecurityListener will save the user when adding the LastGrantedAuthoritiesProperty
                     // and so the user is persisted
                     wc.login("user1");
-                    HtmlPage page = wc.goTo("user/user1/configure");
+                    HtmlPage page = wc.goTo("user/user1/security/");
                     String tokenValue = ((HtmlTextInput) page.getDocumentElement().querySelector("#apiToken")).getText();
                     token.set(tokenValue);
                 }
@@ -83,12 +83,12 @@ public class BasicHeaderApiTokenAuthenticatorTest {
                 wc.getOptions().setThrowExceptionOnFailingStatusCode(false);
 
                 { // for invalid token, no effect
-                    WebRequest request = new WebRequest(new URL(j.jenkins.getRootUrl() + "whoAmI/api/xml"));
+                    WebRequest request = new WebRequest(new URI(j.jenkins.getRootUrl() + "whoAmI/api/xml").toURL());
                     request.setAdditionalHeader("Authorization", base64("user1", "invalid-token"));
                     assertThat(wc.getPage(request).getWebResponse().getStatusCode(), equalTo(401));
                 }
                 { // for invalid user, no effect
-                    WebRequest request = new WebRequest(new URL(j.jenkins.getRootUrl() + "whoAmI/api/xml"));
+                    WebRequest request = new WebRequest(new URI(j.jenkins.getRootUrl() + "whoAmI/api/xml").toURL());
                     request.setAdditionalHeader("Authorization", base64("user-not-valid", token.get()));
                     assertThat(wc.getPage(request).getWebResponse().getStatusCode(), equalTo(401));
                 }
@@ -96,7 +96,7 @@ public class BasicHeaderApiTokenAuthenticatorTest {
                 assertNull(User.getById("user-not-valid", false));
 
                 { // valid user with valid token, ok
-                    WebRequest request = new WebRequest(new URL(j.jenkins.getRootUrl() + "whoAmI/api/xml"));
+                    WebRequest request = new WebRequest(new URI(j.jenkins.getRootUrl() + "whoAmI/api/xml").toURL());
                     request.setAdditionalHeader("Authorization", base64("user1", token.get()));
                     XmlPage xmlPage = wc.getPage(request);
                     assertThat(xmlPage, hasXPath("//name", is("user1")));
@@ -118,7 +118,7 @@ public class BasicHeaderApiTokenAuthenticatorTest {
                 {
                     JenkinsRule.WebClient wc = j.createWebClient();
                     wc.login("user1");
-                    HtmlPage page = wc.goTo("user/user1/configure");
+                    HtmlPage page = wc.goTo("user/user1/security/");
                     String tokenValue = ((HtmlTextInput) page.getDocumentElement().querySelector("#apiToken")).getText();
                     token.set(tokenValue);
                 }
@@ -131,12 +131,12 @@ public class BasicHeaderApiTokenAuthenticatorTest {
                 wc.getOptions().setThrowExceptionOnFailingStatusCode(false);
 
                 { // for invalid token, no effect
-                    WebRequest request = new WebRequest(new URL(j.jenkins.getRootUrl() + "whoAmI/api/xml"));
+                    WebRequest request = new WebRequest(new URI(j.jenkins.getRootUrl() + "whoAmI/api/xml").toURL());
                     request.setAdditionalHeader("Authorization", base64("user1", "invalid-token"));
                     assertThat(wc.getPage(request).getWebResponse().getStatusCode(), equalTo(401));
                 }
                 { // for invalid user, no effect
-                    WebRequest request = new WebRequest(new URL(j.jenkins.getRootUrl() + "whoAmI/api/xml"));
+                    WebRequest request = new WebRequest(new URI(j.jenkins.getRootUrl() + "whoAmI/api/xml").toURL());
                     request.setAdditionalHeader("Authorization", base64("user-not-valid", token.get()));
                     assertThat(wc.getPage(request).getWebResponse().getStatusCode(), equalTo(401));
                 }
@@ -145,7 +145,7 @@ public class BasicHeaderApiTokenAuthenticatorTest {
                 assertNull(User.getById("user-not-valid", false));
 
                 { // valid user with valid token, ok
-                    WebRequest request = new WebRequest(new URL(j.jenkins.getRootUrl() + "whoAmI/api/xml"));
+                    WebRequest request = new WebRequest(new URI(j.jenkins.getRootUrl() + "whoAmI/api/xml").toURL());
                     request.setAdditionalHeader("Authorization", base64("user1", token.get()));
                     XmlPage xmlPage = wc.getPage(request);
                     assertThat(xmlPage, hasXPath("//name", is("user1")));
