@@ -31,24 +31,25 @@ import static org.hamcrest.Matchers.not;
 import static org.hamcrest.xml.HasXPath.hasXPath;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
 
-import com.gargoylesoftware.htmlunit.FailingHttpStatusCodeException;
-import com.gargoylesoftware.htmlunit.HttpMethod;
-import com.gargoylesoftware.htmlunit.Page;
-import com.gargoylesoftware.htmlunit.WebRequest;
-import com.gargoylesoftware.htmlunit.html.HtmlPage;
-import com.gargoylesoftware.htmlunit.html.HtmlSpan;
-import com.gargoylesoftware.htmlunit.util.NameValuePair;
-import com.gargoylesoftware.htmlunit.xml.XmlPage;
 import hudson.model.User;
 import java.io.File;
+import java.net.URI;
 import java.net.URL;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicReference;
 import jenkins.security.ApiTokenProperty;
 import net.sf.json.JSONObject;
+import org.htmlunit.FailingHttpStatusCodeException;
+import org.htmlunit.HttpMethod;
+import org.htmlunit.Page;
+import org.htmlunit.WebRequest;
+import org.htmlunit.html.HtmlPage;
+import org.htmlunit.html.HtmlSpan;
+import org.htmlunit.util.NameValuePair;
+import org.htmlunit.xml.XmlPage;
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.For;
@@ -85,7 +86,7 @@ public class ApiTokenStatsRestartTest {
                    WebClient wc = j.createWebClient().withBasicCredentials(u.getId());
                    wc.getOptions().setThrowExceptionOnFailingStatusCode(false);
 
-                   WebRequest request = new WebRequest(new URL(j.getURL() + "user/" + u.getId() + "/descriptorByName/" + ApiTokenProperty.class.getName() + "/generateNewToken"), HttpMethod.POST);
+                   WebRequest request = new WebRequest(new URI(j.getURL() + "user/" + u.getId() + "/descriptorByName/" + ApiTokenProperty.class.getName() + "/generateNewToken").toURL(), HttpMethod.POST);
                    request.setRequestParameters(List.of(new NameValuePair("newTokenName", TOKEN_NAME)));
 
                    Page page = wc.getPage(request);
@@ -102,7 +103,7 @@ public class ApiTokenStatsRestartTest {
                    WebClient restWc = j.createWebClient().withBasicCredentials(u.getId(), tokenValue.get());
                    checkUserIsConnected(restWc, u.getId());
 
-                   HtmlPage config = wc.goTo(u.getUrl() + "/configure");
+                   HtmlPage config = wc.goTo(u.getUrl() + "/security/");
                    assertEquals(200, config.getWebResponse().getStatusCode());
                    assertThat(config.getWebResponse().getContentAsString(), containsString(tokenUuid.get()));
                    assertThat(config.getWebResponse().getContentAsString(), containsString(tokenName));
@@ -112,7 +113,7 @@ public class ApiTokenStatsRestartTest {
                        restWc.goToXml("whoAmI/api/xml");
                    }
 
-                   HtmlPage configWithStats = wc.goTo(u.getUrl() + "/configure");
+                   HtmlPage configWithStats = wc.goTo(u.getUrl() + "/security/");
                    assertEquals(200, configWithStats.getWebResponse().getStatusCode());
                    HtmlSpan useCounterSpan = configWithStats.getDocumentElement().getOneHtmlElementByAttribute("span", "class", "token-use-counter");
                    assertThat(useCounterSpan.getTextContent(), containsString("" + NUM_CALL_WITH_TOKEN));
@@ -130,7 +131,7 @@ public class ApiTokenStatsRestartTest {
                 WebClient wc = j.createWebClient().login(u.getId());
                 checkUserIsConnected(wc, u.getId());
 
-                HtmlPage config = wc.goTo(u.getUrl() + "/configure");
+                HtmlPage config = wc.goTo(u.getUrl() + "/security/");
                 assertEquals(200, config.getWebResponse().getStatusCode());
                 assertThat(config.getWebResponse().getContentAsString(), containsString(tokenUuid.get()));
                 assertThat(config.getWebResponse().getContentAsString(), containsString(TOKEN_NAME));
@@ -143,7 +144,7 @@ public class ApiTokenStatsRestartTest {
                 WebClient restWc = j.createWebClient().withBasicCredentials(u.getId(), tokenValue.get());
                 checkUserIsNotConnected(restWc);
 
-                HtmlPage configWithoutToken = wc.goTo(u.getUrl() + "/configure");
+                HtmlPage configWithoutToken = wc.goTo(u.getUrl() + "/security/");
                 assertEquals(200, configWithoutToken.getWebResponse().getStatusCode());
                 assertThat(configWithoutToken.getWebResponse().getContentAsString(), not(containsString(tokenUuid.get())));
                 assertThat(configWithoutToken.getWebResponse().getContentAsString(), not(containsString(TOKEN_NAME)));
@@ -159,12 +160,8 @@ public class ApiTokenStatsRestartTest {
     }
 
     private static void checkUserIsNotConnected(WebClient wc) throws Exception {
-        try {
-            wc.goToXml("whoAmI/api/xml");
-            fail();
-        } catch (FailingHttpStatusCodeException e) {
-            assertEquals(401, e.getStatusCode());
-        }
+        FailingHttpStatusCodeException e = assertThrows(FailingHttpStatusCodeException.class, () -> wc.goToXml("whoAmI/api/xml"));
+        assertEquals(401, e.getStatusCode());
     }
 
     private static void revokeToken(JenkinsRule j, WebClient wc, String login, String tokenUuid) throws Exception {
